# MagiAttention

./: .clangd  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  _config.yml  al_folio_feed.xml  feed.xml  index.html  mypy.ini  pyproject.toml  repro_bwd_sparse.py  repro_ci600.py  requirements.txt  robots.txt  scm_setup.py  setup.py  sitemap.xml  test_cp2.py
.cursor/rules/: magi-workflow.mdc
.github/scripts/: build_whl.sh  install_whl.sh  multi_node_launch_sco.sh
.github/workflows/: build_test.yaml  deploy.yml  lint.yaml  sphinx.yaml  sphinx.yml  unittest.yaml
.tmp/: PR313_sparse_kv_indices_直通路径.md
.tmp/debug/: repro_65k_crash.py  repro_65k_crash_v2.py  repro_65k_crash_v3.py
_includes/: header.liquid
_pages/: ffa_with_sink.md  magiattn.md
_plugins/: external-posts.rb
assets/bibliography/: ffa_with_sink.bib  magiattn.bib
assets/js/: search-data.js
assets/jupyter/: demo.ipynb.html
blog/: 404.html  al_folio_feed.xml  feed.xml  ffa_with_sink.html  index.html  sitemap.xml
blog/2015/: index.html
blog/2020/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
blog/2025/: index.html
blogs/: feed.xml  sitemap.xml
docs/: .buildinfo  .buildinfo.bak  README.md  api.html  genindex.html  index.html  install.html  magi_api.html  objects.inv  py-modindex.html  ranges.html  release.md  requirements.txt  search.html  searchindex.js  versions.json
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  magi_api.doctree  ranges.doctree
docs/_static/: documentation_options.js
docs/html/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  ranges.html  search.html  searchindex.js
docs/main/: .buildinfo  blog.html  env_variables.html  genindex.html  guide.html  index.html  install.html  magi_api.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/source/: api.md  conf.py  env_variables.md  github_actions_runners.md  guide.md  index.md  magi_api.md  quickstart.md  runner_expansion_quickstart.md  tutorial.md
docs/test_sphinx/: magi_api.html  quickstart.html  searchindex.js
docs/v1.0.3/: .buildinfo  api.html  genindex.html  guide.html  index.html  install.html  magi_api.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/v1.0.4/: .buildinfo  env_variables.html  genindex.html  guide.html  index.html  install.html  magi_api.html  py-modindex.html  quickstart.html  search.html
docs/v1.0.5/: .buildinfo  env_variables.html  genindex.html  guide.html  index.html  install.html  magi_api.html  py-modindex.html  quickstart.html  search.html
docs/v1.1.0/: .buildinfo  blog.html  genindex.html  index.html  py-modindex.html  search.html
docs/v1.1.1/: .buildinfo  blog.html  genindex.html  index.html  py-modindex.html  search.html
example/megatron/: README.md
example/torch_native/: README.md
example/transformers/: README.md  magi_attention_func.py  magi_trainer.py  run_magi_clm.sh  run_origin_clm.sh
examples/megatron/: README.md
examples/sparse_attention/: README.md  block_sparse_attn.py
examples/torch_native/: README.md  main.py
examples/transformers/: README.md  magi_attention_func.py  magi_trainer.py
exps/: README.md  bench_index_attn_tma.py  run_profile.py
exps/attn/: bench_causal_partition.py  bench_intra_wg_overlap.py  merge_csv.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_blackwell_benchmark.py  run_block_sparse_benchmark.py  run_block_sparse_gqa.py  run_block_sparse_variable.py  run_max_logits_benchmark.py  run_nsa_benchmark.py  run_packgqa_bench.py  run_packgqa_swapab_bench.py  run_sparse_kv_block_sparse_benchmark.py  run_sparse_kv_dense_benchmark.py  run_sparse_kv_pack_gqa_benchmark.py  run_sparse_load_benchmark.py  run_sparse_load_block_sparse_benchmark.py  run_sparse_load_dense_benchmark.py  run_sparse_load_normal_benchmark.py  run_sparse_load_pack_gqa_benchmark.py  run_sparse_load_swap_ab_benchmark.py  run_swapab_benchmark.py  run_swapbwdqkloop_block_sparse_benchmark.py  run_swapbwdqkloop_sparse_load_benchmark.py  run_var_block_sparse_benchmark.py  test_block_sparse.py  test_block_sparse_variable.py  test_nsa_correctness.py  unified_ffa_benchmark.py
exps/device_a2av/: test.py
exps/dist_attn/: Dockerfile.benchmark  Dockerfile.benchmark2  benchmark_conf.py  build_benchmark_docker.sh  build_benchmark_docker2.sh  main.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_profile.py
exps/grpcoll/: grpcoll_utils.py  run_grpcoll_test.sh  test_internode_grpcoll.py  test_intranode_grpcoll.py  test_low_latency_grpcoll.py
extensions/: README.md  fa2_interface_with_sink.py  fa3_interface_with_sink.py
extensions/magi_attn_extensions/: __init__.py  dsa_interface.py  fa3_interface_with_sink.py
extensions/tests/: test_fa_interface_with_sink.py
magi_attention/: __init__.py  config.py  dist_attn_runtime_mgr.py  magi_attn_ext.pyi
magi_attention/api/: __init__.py  (+2 more)
magi_attention/csrc/comm/deepep_csrc/: CMakeLists.txt  config.hpp  deep_ep.cpp  deep_ep.hpp  event.hpp
magi_attention/csrc/comm/deepep_csrc/kernels/: CMakeLists.txt  api.cuh  buffer.cuh  configs.cuh  exception.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  intranode.cu  layout.cu  runtime.cu  utils.cuh
magi_fsdp/: __init__.py  _fsdp_api.py  _fsdp_ckpt_state.py  _fsdp_collectives.py  _fsdp_common.py  _fsdp_init.py  _fsdp_mem_tracker.py  _fsdp_module.py  _fsdp_offload.py  _fsdp_param.py  _fsdp_param_group.py  _fsdp_state.py  _fully_shard.py
scripts/: enable_ibgda_on_host.sh  hopper_makefile_wrapper.mk  install_clang_format.sh  install_flash_attn_cute.sh  install_magiattn_on_blackwell.sh  install_nvshmem_roce.sh  install_on_scm.sh  install_skip_all.sh  patch_create_block_mask.py  run_csrc_code_formatter.sh
tests/: README.md  README_zh.md  __init__.py  ncu_profile.py  test_1226.py  test_index_attn_tier1.py  test_magi_attn_interface.py  test_pipeline.py  test_pipeline_sdpa.py  test_unit_pipeline_case2.py
tools/: precompile_ffa_fa4.py
(+1221 files in other folders)
