[project]
name = "magi_fsdp"
dynamic = ["version"]
description = "A custom FSDP implementation based on PyTorch FSDP2 to support features including main parameters, hierarchical ZERO, FSDP-style activation offloading, etc"
authors = [
    {name = "Zewei Tao", email = "zeweitao@sand.ai"},
    {name = "Yunpeng Huang", email = "yunpenghuang@sand.ai"},
    {name = "Tao Bu", email = "502024330002@smail.nju.edu.cn"},
    {name = "Qiangang Wang", email = "522024330081@smail.nju.edu.cn"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SandAI-org/MagiFSDP/"
"Bug Tracker" = "https://github.com/SandAI-org/MagiFSDP/issues"

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch",
    "ninja",
    "packaging"
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = "git"
default-version = "0.0.0"

[tool.versioningit.write]
file = "magi_fsdp/_version.py"
encoding = "utf-8"
template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["magi_fsdp*"]
exclude = [
    "build*",
    "tests*",
    "dist*",
    "docs*",
    "tools*",
    "assets*",
]
